--- a/source/_posts/单例模式.md
+++ b/source/_posts/单例模式.md
@@ -76,6 +76,7 @@ Singleton.prototype.getInstance = (function(){
         height: 200px;
         line-height: 200px;
         border: 1px solid pink;
+        color: pink;
         position: fixed;
         top: 50%;
         left: 50%;
@@ -94,25 +95,25 @@ Singleton.prototype.getInstance = (function(){
         let hiddenbtn = document.getElementById('hidden')
 
         // 闭包实现
-        const Model = (function() {
-          let model = null
+        const Modal = (function() {
+          let modal = null
           return function() {
-            if (!model) {
-              model = document.createElement('div')
-              model.innerText = '单例模式的核心就是保证只有一个实例对象'
-              model.style.display = 'none'
-              model.style.color = 'pink'
-              document.body.appendChild(model)
+            if (!modal) {
+              modal = document.createElement('div')
+              modal.innerText = '我一个单例的模态框'
+              modal.style.display = 'none'
+              modal.style.color = 'pink'
+              document.body.appendChild(modal)
             }
-            return model
+            return modal
           }
         })()
 
         showbtn.addEventListener(
           'click',
           function() {
-            const model = new Model()
-            model.style.display = 'block'
+            const modal = new Modal()
+            modal.style.display = 'block'
           },
           false
         )
@@ -120,8 +121,8 @@ Singleton.prototype.getInstance = (function(){
         hiddenbtn.addEventListener(
           'click',
           function() {
-            const model = new Model()
-            model.style.display = 'none'
+            const modal = new Modal()
+            modal.style.display = 'none'
           },
           false
         )
